# baize

./: .gitignore  .kazelcfg.json  BUILD.bazel  Makefile  README.md  WORKSPACE  config.toml  executor.Dockerfile  go.mod  go.sum  main.go  remote-cache.Dockerfile  server.Dockerfile
cmd/baize-executor/: BUILD.bazel  main.go
cmd/baize-server/: BUILD.bazel  main.go
cmd/debug-tools/: BUILD.bazel  main.go
cmd/remote-cache/: BUILD.bazel  main.go
deploy/docker-compose/: docker-compose.yaml  remote-cache-docker-compose.yaml
doc/: README_zh.md
hack/: BUILD.bazel  build-all-images.sh
pkg/baize/: BUILD.bazel  ac.go  bytestream.go  cas.go  exec.go  server.go
pkg/caches/: BUILD.bazel  caches_test.go  composed_cache.go  disk_cache.go  memory_cache.go  redis_cache.go  utils.go
pkg/config/: BUILD.bazel
pkg/copy_from_buildbuddy/utils/disk/: BUILD.bazel  disk.go
pkg/copy_from_buildbuddy/utils/hash/: BUILD.bazel  hash_test.go
pkg/copy_from_buildbuddy/utils/lru/: BUILD.bazel  lru.go  lru_test.go
pkg/copy_from_buildbuddy/utils/random/: BUILD.bazel  random.go
pkg/copy_from_buildbuddy/utils/status/: BUILD.bazel  status_test.go
pkg/executor/: BUILD.bazel
pkg/interfaces/: BUILD.bazel
pkg/proto/scheduler/: BUILD.bazel  scheduler.pb.go  scheduler.proto
pkg/scheduler/: BUILD.bazel
pkg/utils/: BUILD.bazel
pkg/utils/bazel/: BUILD.bazel
pkg/utils/commandutil/: BUILD.bazel  commandutil.go
pkg/utils/digest/: BUILD.bazel  digest.go
pkg/utils/healthchecker/: BUILD.bazel
pkg/utils/remotecacheutils/: BUILD.bazel
pkg/utils/status/: BUILD.bazel  status_test.go
