load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "baize-executor_lib",
    srcs = ["main.go"],
    importpath = "github.com/btwiuse/baize/cmd/baize-executor",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "baize-executor",
    embed = [":baize-executor_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
