load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "baize-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/btwiuse/baize/cmd/baize-server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/baize",
        "//pkg/config",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "baize-server",
    embed = [":baize-server_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
