load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "debug-tools_lib",
    srcs = ["main.go"],
    importpath = "github.com/btwiuse/baize/cmd/debug-tools",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/caches",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "debug-tools",
    embed = [":debug-tools_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
