load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "remote-cache_lib",
    srcs = ["main.go"],
    importpath = "github.com/btwiuse/baize/cmd/remote-cache",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/caches",
        "//pkg/config",
        "//pkg/interfaces",
        "//pkg/utils/healthchecker",
        "//pkg/utils/remotecacheutils",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "remote-cache",
    embed = [":remote-cache_lib"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
