load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "baize",
    srcs = [
        "ac.go",
        "bytestream.go",
        "cas.go",
        "constants.go",
        "exec.go",
        "resource.go",
        "server.go",
        "util.go",
    ],
    importpath = "github.com/btwiuse/baize/pkg/baize",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/caches",
        "//pkg/config",
        "//pkg/interfaces",
        "//pkg/utils",
        "//pkg/utils/commandutil",
        "//pkg/utils/digest",
        "//pkg/utils/status",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_bazelbuild_remote_apis//build/bazel/semver",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_google_uuid//:uuid",
        "@com_github_sirupsen_logrus//:logrus",
        "@go_googleapis//google/bytestream:bytestream_go_proto",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
