load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "caches",
    srcs = [
        "composed_cache.go",
        "disk_cache.go",
        "error.go",
        "memory_cache.go",
        "metrics.go",
        "redis_cache.go",
        "utils.go",
    ],
    importpath = "github.com/btwiuse/baize/pkg/caches",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/copy_from_buildbuddy/utils/disk",
        "//pkg/copy_from_buildbuddy/utils/lru",
        "//pkg/interfaces",
        "//pkg/utils",
        "//pkg/utils/status",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_go_redis_redis_v8//:redis",
        "@com_github_orcaman_concurrent_map//:concurrent-map",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "caches_test",
    srcs = [
        "caches_test.go",
        "suite_test.go",
    ],
    embed = [":caches"],
    deps = [
        "//pkg/config",
        "//pkg/interfaces",
        "//pkg/utils",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
