load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "commandutil",
    srcs = ["commandutil.go"],
    importpath = "github.com/btwiuse/baize/pkg/utils/commandutil",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/interfaces",
        "//pkg/utils/status",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
