load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "digest",
    srcs = ["digest.go"],
    importpath = "github.com/btwiuse/baize/pkg/utils/digest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/utils/status",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_google_uuid//:uuid",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
