load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "remotecacheutils",
    srcs = ["url_utils.go"],
    importpath = "github.com/btwiuse/baize/pkg/utils/remotecacheutils",
    visibility = ["//visibility:public"],
)

go_test(
    name = "remotecacheutils_test",
    srcs = ["suite_test.go"],
    embed = [":remotecacheutils"],
    deps = [
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
