load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "disk",
    srcs = ["disk.go"],
    importpath = "github.com/btwiuse/baize/pkg/copy_from_buildbuddy/utils/disk",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/copy_from_buildbuddy/utils/random",
        "//pkg/copy_from_buildbuddy/utils/status",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_x_sys//unix",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
