load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hash",
    srcs = ["hash.go"],
    importpath = "github.com/btwiuse/baize/pkg/copy_from_buildbuddy/utils/hash",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["hash_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "hash_test",
    srcs = ["hash_test.go"],
    deps = [
        ":hash",
        "@com_github_stretchr_testify//assert",
    ],
)
