load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "lru",
    srcs = ["lru.go"],
    importpath = "github.com/btwiuse/baize/pkg/copy_from_buildbuddy/utils/lru",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/copy_from_buildbuddy/utils/hash",
        "//pkg/copy_from_buildbuddy/utils/status",
        "//pkg/interfaces",
        "@com_github_cespare_xxhash_v2//:xxhash",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["lru_test.go"],
    deps = [
        ":go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "lru_test",
    srcs = ["lru_test.go"],
    deps = [
        ":lru",
        "@com_github_stretchr_testify//require",
    ],
)
